# OCT_CV

./: .env.example  .gitignore  README.md  pyproject.toml
config/: classes.yaml  project.yaml
data/: augmentations.py  coco_to_masks.py  prepare_masks.py  roboflow_download.py  split_patientwise.py
data/schemas/: roboflow_coco.md
datasets/: coco_multimodal.py  transforms.py
evaluation/: eval_cls.py  eval_masks.py
inference/: postprocess.py  predict.py
models/: decoders.py  multitask_unet.py  unet_backbone.py
octmultitask.egg-info/: tmpxa0ohrd7
scripts/: infer_folder.sh  make_splits.sh  train_default.sh
service/: app.py
service/docker/: Dockerfile  gunicorn_conf.py
service/schemas/: output.schema.json
tests/: test_dataset.py  test_infer.py  test_losses.py
training/: callbacks.py  hpo_optuna.py  train.py
utils/: io.py  losses.py  metrics.py  seed.py  viz.py
